- Fix: DatiTrasporto.PesoLordo e DatiTrasporto.PesoNetto non possono superare il valore 9999.99m. Closes #157.

- Bump FatturaElettronica.Core a 1.1.2.
- Bump Microsoft.NET.Test.Sdk to 16.0.1.
- Bump FluentValidation to 8.1.3.
- Bump Newtonsoft.Json to 12.0.1.
- Bump MSTest.TestAdapter to 1.4.0
- Bump MSTest.TestFramework to 1.4.0

v1.1.5
=======

Released on February 2, 2019

- Fix: Tabella CausalePagamento aggiornata al 2019. Closes #151.

v1.1.4
=======

Released on January 31, 2019

- Fix: ScontoMaggiorazione può accettare sia Importo che Percentuale. Closes #146.
- Fix: IdPaese.Irlanda è duplicato mentre Islanda è assente. Closes #144.
- README: aggiunto esempio di inserimento elemento Body. Addresses #141.

v1.1.3
======

Released on January 23, 2019
 
- New: nuovo logo per il progetto FatturaElettronica, by Roberto "Kalamun" Pasini. Closes 101.
- Fix: Link obsoleto alle specifiche tecniche ufficiali. Closes #139.
- Fix: ScontoMaggiorazione deve accettare Importo o Percentuale a 0. Addresses #136.
- Fix: ScontoMaggiorazione non deve accettare Importo e Percentuale entrambi valorizzati. Addresses #136.

v1.1.2
======
 
Released on January 21, 2019

- Fix: Validazione ScontoMaggiorazione dovrebbe accettare Importo o Percentuale a 0. Closes #136.

v1.1.1
======
 
Released on January 17, 2019

- Fix: Tabella CausalePagamento completata coi nomi di ogni pagamento (Michael Mairegger). Pull #127.
- Fix: Convalida Provincia non conforme ai controlli lato AgEntrate. Closes #129.
- Fix: CessionarioCommittente.RappresentanteFiscale, errore "sequenza tag errata". Closes #133.
- Fix: Supporto per 8 decimali nel PrezzoUnitario (Claudio Lepri). Pull #130; Closes #125.
- Bump FatturaElettronica.Core a 1.1.1.

v1.1
====
 
Released on January 6, 2019

- New: NetStandard 2.0 aggiunto ai target framework (Federico Dipuma). Closes #119.
- New: costruttore classe Fattura ora è pubblico. Closes #99.
- New: performance migliorata (Federico Dipuma). See #120.